fix: APPS-3440 Article/Blog detail template - adjust image spacing in FPB RichText (#264)
* fix: Article/Blog detail template - adjust image spacing in FPB RichText

* fix: update component library

* fix: update margin

* fix: update margin on blog/[slug] figure richText

* fix: figure stles to css imports slug and index be sure it is on all the pages with richText in either FPB or on the page assets/styles/listing-pages.scss,assets/styles/slug-pages.scss,components/ARSCIMCSSection.vue,components/BasicCollection.vue,pages/[...slug].vue,pages/blog/[slug].vue,pages/collections/[collectionSlug]/[slug].vue,pages/collections/la-rebellion/index.vue,pages/series/[slug].vue,pages/touring-series/[slug].vue

* fix: delete the figure css from blog/slug

* fix: add missing bracket

* fix: add specificity to figure

---------

--- a/assets/styles/listing-pages.scss
+++ b/assets/styles/listing-pages.scss
@@ -11,9 +11,15 @@
   }
 }
 
-  @media (max-width: 1200px) {
-    .one-column {
-      padding-left: var(--unit-gutter);
-      padding-right: var(--unit-gutter);
-    }
+@media (max-width: 1200px) {
+  .one-column {
+    padding-left: var(--unit-gutter);
+    padding-right: var(--unit-gutter);
   }
+}
+
+:deep(.rich-text) {
+  figure {
+    margin: var(--space-l) 0;
+  }
+}
