--- a/assets/styles/slug-pages.scss
+++ b/assets/styles/slug-pages.scss
@@ -107,6 +107,16 @@
       top: -70px; //offset links in the document by the height of the sticky header
     }
   }
+
+  :deep(.rich-text figure) {
+    margin: var(--space-l) 0;
+  }
+}
+
+:deep(.rich-text) {
+  figure {
+    margin: var(--space-l) 0;
+  }
 }
 
 // Make all images the same in FPB Media With Text
